--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    height: 100%;
+}
+body {
+    background: linear-gradient(#e66465, #9198e5);
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    user-select: none;
+}
